<?xml version="1.0"?>
<package format="2">
  <name>dji_m100_description</name>
  <version>0.0.0</version>
  <description>The dji_m100_description package. Meshes are taken from https://github.com/caochao39/hku_m100_description.</description>

  <maintainer email="tahsincankose@gmail.com">Tahsincan Kose</maintainer>


  <license>MIT</license>


  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>dji_m100_gazebo</exec_depend>
  <depend>urdf</depend>
  <depend>controller_manager</depend>
  <depend>joint_state_controller</depend>
  <depend>robot_state_publisher</depend>
  <export>
  </export>
</package>
