<?xml version="1.0"?>
<package format="2">
  <name>dji_m100_description</name>
  <version>0.0.0</version>
  <description>The dji_m100_description package. Meshes are taken from https://github.com/caochao39/hku_m100_description.</description>

  <maintainer email="tahsincankose@gmail.com">Tahsincan Kose</maintainer>


  <license>MIT</license>


  <buildtool_depend>catkin</buildtool_depend>
  
  <exec_depend>joint_state_controller</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>dji_m100_controller_gazebo</exec_depend>
  <export>
  </export>
</package>
